--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.1",
-    "socket.io": "^2.2.0",
-    "yarn": "^1.16.0"
+    "socket.io": "^2.2.0"
   }
 }
